// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Skeleton ACT theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-l7mhj7-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ACT_ET theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8l655q-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURA theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15om3bo-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-121fxnd-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-23i7u8-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;

exports[`Skeleton ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-11xkbm-MuiSkeleton-root"
    style="width: 100px; height: 100px;"
  />
</div>
`;
